--- a/src/Views/Shared/_SocialSharing.cshtml
+++ b/src/Views/Shared/_SocialSharing.cshtml
@@ -1,4 +1,4 @@
-﻿@model string
+@model string
 @{
     string currentUrl = $"{Context.Request.Scheme}://{Context.Request.Host}{Context.Request.Path}";
     string enc = System.Net.WebUtility.UrlEncode(currentUrl);
